--- a/index.html
+++ b/index.html
@@ -26,17 +26,34 @@
         </ul>
       </nav>
       <div class="banner">
-        <div class="banner-content ">
+        <div class="banner-content">
           <h1 class="banner-title">Brand New Group of Architects</h1>
-        <p class="banner-description">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even</p>
-        <button class="btn-primary center">Explore More</button>
-      </div>
-      <img class="banner-image" src="/images/banner.png" alt="">
+          <p class="banner-description">
+            There are many variations of passages of Lorem Ipsum available, but
+            the majority have suffered alteration in some form, by injected
+            humour, or randomised words which don't look even
+          </p>
+          <button class="btn-primary center">Explore More</button>
         </div>
-      
+        <img class="banner-image" src="/images/banner.png" alt="" />
+      </div>
     </header>
-    
-    <main></main>
+
+    <main>
+      <section class="teams display-flex">
+        <div class="team-img-container">
+            <img src="/images/team1.png" alt="">
+            <img src="/images/team2.png" alt="">
+            <img src="/images/team3.png" alt="">
+            <img src="/images/team4.png" alt="">
+        </div>
+        <div class="our-features">
+            <div class="feature-title"><h1><span class="text-light-gray" id="quick-list ">Quick list</span> of Our <span class="text-primary">Features</span></h1></div>
+            <div class="feature-description text-light-gray">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even</div>
+            <button class="btn-primary margin">Explore More</button>
+        </div>
+      </section>
+    </main>
     <footer></footer>
   </body>
 </html>
