--- a/index.html
+++ b/index.html
@@ -40,19 +40,71 @@
     </header>
 
     <main>
+      <!-- Team Section -->
       <section class="teams display-flex">
         <div class="team-img-container">
-            <img src="/images/team1.png" alt="">
-            <img src="/images/team2.png" alt="">
-            <img src="/images/team3.png" alt="">
-            <img src="/images/team4.png" alt="">
+          <img src="/images/team1.png" alt="" />
+          <img src="/images/team2.png" alt="" />
+          <img src="/images/team3.png" alt="" />
+          <img src="/images/team4.png" alt="" />
         </div>
         <div class="our-features">
-            <div class="feature-title"><h1><span class="text-light-gray" id="quick-list ">Quick list</span> of Our <span class="text-primary">Features</span></h1></div>
-            <div class="feature-description text-light-gray">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even</div>
-            <button class="btn-primary margin">Explore More</button>
+          <div class="section-title">
+            <h1>
+              <span class="text-light-gray" id="quick-list ">Quick list</span>
+              of Our <span class="text-primary">Features</span>
+            </h1>
+          </div>
+          <div class="feature-description text-light-gray">
+            There are many variations of passages of Lorem Ipsum available, but
+            the majority have suffered alteration in some form, by injected
+            humour, or randomised words which don't look even
+          </div>
+          <button class="btn-primary margin">Explore More</button>
         </div>
       </section>
+
+      <!-- feature will enjoy -->
+      <section>
+        <h3 class="section-title">Some Facts</h3>
+        <p class="text-light-gray fact-description">
+          There are many variations of passages of Lorem Ipsum available, but
+          the majority have suffered alteration.
+        </p>
+        <div class="facts-container">
+          <div class="fact-card display-flex">
+            <div>
+              <img src="../images/icons/ribon.png" alt="" class="fact-icon" />
+              <h4 class="facts-number">54</h4>
+              <h5 class="fact-name">Awards Winnings</h5>
+            </div>
+          </div>
+          <div class="fact-card display-flex">
+            <div>
+                <img src="../images/icons/projects.png" alt="" class="fact-icon" />
+            <h4 class="facts-number">1458</h4>
+            <h5 class="fact-name">Project Finished</h5>
+            </div>
+
+          </div>
+          <div class="fact-card display-flex">
+            <div>
+                <img src="../images/icons/customers.png" alt="" class="fact-icon" />
+            <h4 class="facts-number">590</h4>
+            <h5 class="fact-name">Clients Worked</h5>
+            </div>
+          </div>
+          <div class="fact-card display-flex">
+            <div>
+                <img src="../images/icons/email.png" alt="" class="fact-icon" />
+            <h4 class="facts-number">22578</h4>
+            <h5 class="fact-name">Email Send</h5>
+            </div>
+          </div>
+        </div>
+      </section>
+      <!-- Some Facts -->
+      <section class="some-facts"></section>
     </main>
     <footer></footer>
   </body>
