--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
         </div>
       </section>
 
-      <!-- feature will enjoy -->
+      <!-- Some Facts -->
       <section>
         <h3 class="section-title">Some Facts</h3>
         <p class="text-light-gray fact-description">
@@ -103,8 +103,22 @@
           </div>
         </div>
       </section>
-      <!-- Some Facts -->
-      <section class="some-facts"></section>
+      <!-- Sponsors -->
+      <section class="our-sponsors">
+        <div class="sponsor-info">
+            <h3 class="section-title">Our Sponsors</h3>
+            <p class="text-light-gray">
+                There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration.
+            </p>
+        </div>
+        <div class="sponsor-companies">
+            <img src="images/sponsors/spotify.png" alt="">
+            <img src="images/sponsors/google.png" alt="">
+            <img src="images/sponsors/amazon.png" alt="">
+            <img src="images/sponsors/telerama.png" alt="">
+            <img src="images/sponsors/figma.png" alt="">
+        </div>
+      </section>
     </main>
     <footer></footer>
   </body>
