--- a/index.html
+++ b/index.html
@@ -63,6 +63,39 @@
           <button class="btn-primary margin">Explore More</button>
         </div>
       </section>
+      <!-- feature section  -->
+       <section class="features display-flex">
+        <div>
+            <h3 id="feature-section-title" class="section-title">
+                Features you will love & enjoy</h3>
+                <p class="text-light-gray">
+                    There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even
+                </p>
+                <div class="feature-card">
+                    <h4 class="feature-title">Dexktop & Mobile Version</h4>
+                    <p class="text-light-gray">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised...........</p>
+                </div>
+                <div class="feature-card">
+                    <h4 class="feature-title">Dexktop & Mobile Version</h4>
+                    <p class="text-light-gray">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised...........</p>
+                </div>
+                <div class="feature-card">
+                    <h4 class="feature-title">Dexktop & Mobile Version</h4>
+                    <p class="text-light-gray">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised...........</p>
+                </div>
+                <div class="feature-card">
+                    <h4 class="feature-title">Dexktop & Mobile Version</h4>
+                    <p class="text-light-gray">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised...........</p>
+                </div>
+        </div>
+        <div>
+            <img class="feature-architect" src="/images/architect.png" alt="">
+            <button id="ex-badge" class="btn-primary">
+                <span id="ex-year">10+Year</span><br>
+                <span >Experience</span>
+            </button>
+        </div>
+       </section>
 
       <!-- Some Facts -->
       <section>
@@ -104,7 +137,7 @@
         </div>
       </section>
       <!-- Sponsors -->
-      <section class="our-sponsors">
+      <section class="our-sponsors">             
         <div class="sponsor-info">
             <h3 class="section-title">Our Sponsors</h3>
             <p class="text-light-gray">
